#
# Change log of IntaRNA available at 
#
# https://github.com/BackofenLab/IntaRNA
#
################################################################################

################################################################################
# changes in development version since last release 
################################################################################

# R
- `IntaRNA_CSV_p-value.R` script to estimate p-values based on energy values

################################################################################  
################################################################################

200121 Martin Raden
 + R/IntaRNA_CSV_p-value.R : former addPvalues2csv.R
 + R/IntaRNA_plotRegions.R : former plotRegions.R
 * README.md : adapted to renamings
 + R/Makefile.am : install R scripts
 
 
191115 Martin Raden
 + R/addPvalues2csv.R
 * R/README.md :
   + docu of addPvalue2csv.R

################################################################################
### version 3.1.3
################################################################################  

# IntaRNA
- bugfix latest changes on traceback

################################################################################  

191104 Martin Raden
 * PredictorMfe2dSeedExtension::
   * traceBack() 
     * bugfix tracback (reset of k2 iteration)

191031 Martin Raden
 * using c++11 raw strings where appropriate

################################################################################
### version 3.1.2
################################################################################  

# IntaRNA
- `--outSep` = user-defined column separator for tabular CSV output
- bugfix non-overlapping suboptimal enumeration
- bugfix noLP optimization (missing case of direct left-stack extension)
- CSV output
  - new ensemble energy and partition function output for intra-molecular 
    structures formed by seq1 and seq2 (`Eall1, Eall2, Zall1, Zall2`)